RESOLVED FIXED303876
REGRESSION(303851@main): [ macOS iOS Debug ] ipc/serialized-type-info.html is a constant failure
https://bugs.webkit.org/show_bug.cgi?id=303876
Summary REGRESSION(303851@main): [ macOS iOS Debug ] ipc/serialized-type-info.html is...
Marta Darbinyan
Reported 2025-12-09 13:35:04 PST
The following test is constant failure on Debug macOS after 303851@main. ipc/serialized-type-info.html @@ -1,2 +1,2 @@ -ALERT: PASS +ALERT: FAIL - IPC Metadata is incorrect for types: size_t Test history: https://results.webkit.org/?suite=layout-tests&test=ipc%2Fserialized-type-info.html&style=debug Test result: https://ews-build.webkit.org/#/builders/161/builds/5803
Attachments
Radar WebKit Bug Importer
Comment 1 2025-12-09 13:35:33 PST
EWS
Comment 2 2025-12-09 16:08:08 PST
Test gardening commit 304188@main (ef63a3b41762): <https://commits.webkit.org/304188@main> Reviewed commits have been landed. Closing PR #55142 and removing active labels.
ccarley2
Comment 3 2025-12-16 15:13:27 PST
EWS
Comment 4 2025-12-17 11:16:07 PST
Committed 304617@main (54930403f69c): <https://commits.webkit.org/304617@main> Reviewed commits have been landed. Closing PR #55515 and removing active labels.
Alexey Proskuryakov
Comment 5 2025-12-18 12:55:32 PST
*** Bug 304346 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.